--- a/requirements-pytest.txt
+++ b/requirements-pytest.txt
@@ -4,3 +4,7 @@ pytest-blockage>=0.2.2
 pytest-localserver>=0.5
 pytest-cov>=2.12
 maidenhead==1.6.0
+requests==2.32.2
+bs4==4.13.3
+redis==5.2.1
+ephem==4.2
